# foliors

./: .gitignore  Cargo.toml  README.md
src/: dataroutes.rs  lib.rs  main.rs  util.rs
src/holdings/: holding.rs  mod.rs  plot.rs
static/pages/: chart.html  history.html  index.html
static/scripts/: fetch_history.js  make_chart.js  submit_prices.js
static/styles/: main.css
templates/: enter_asset_values.html.tera  view_holdings.html.tera
