[package]
name = "foliors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.5"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
ron = "0.8.1"
serde_json = "1.0.108"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.chrono]
version = "0.4.31"
features = ["serde", "clock"]

